# nixalarm

./: .gitignore  .mcp.json  AGENTS.md  CMakeLists.txt  LICENSE  Makefile  README.md  opencode.json
.agents/plugins/stigmergy/: hooks.json  plugin.json
.claude/: settings.json
.codex/: config.toml
.opencode/plugin/: stigmergy.js
assets/: ATTRIBUTION.md  generate_backing.py  generate_digits.py  generate_transmittance.py  nixie_variants.py  scale_masks_hhmm_16x9.py  scale_masks_hhmmss_16x9.py  stage_assets.py
assets/icon/: build_icon.py
assets/runtime/nixie/: meta.json
data/: nixalarm.desktop
docs/man/: nixalarm.1  nixalarm.5
packaging/appimage/: build-appimage.sh
packaging/arch/: PKGBUILD  nixalarm.desktop
packaging/deb/: build-deb.sh
packaging/flatpak/: build-flatpak.sh  io.github.Happyarch.nixalarm.desktop  io.github.Happyarch.nixalarm.yml
packaging/nix/: flake.nix
packaging/rpm/: build-rpm.sh
src/: alarm.cpp  alarm.h  audio.cpp  audio.h  clock.cpp  clock.h  config.cpp  config.h  display.cpp  display.h  main.cpp  nixie.cpp  nixie.h  stb_image_impl.cpp  types.h
